--- a/eAppointmentServer/eAppointmentServer.Domain/eAppointmentServer.Domain.csproj
+++ b/eAppointmentServer/eAppointmentServer.Domain/eAppointmentServer.Domain.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Ardalis.SmartEnum" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
   </ItemGroup>
 
