--- a/eAppointmentServer/eAppointmentServer.Domain/eAppointmentServer.Domain.csproj
+++ b/eAppointmentServer/eAppointmentServer.Domain/eAppointmentServer.Domain.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="Ardalis.SmartEnum" Version="8.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.3" />
+    <PackageReference Include="TS.EntityFrameworkCore.GenericRepository" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
