--- a/eAppointmentServer/eAppointmentServer.Application/eAppointmentServer.Application.csproj
+++ b/eAppointmentServer/eAppointmentServer.Application/eAppointmentServer.Application.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
   </ItemGroup>
 
