--- a/eAppointmentServer/eAppointmentServer.Application/eAppointmentServer.Application.csproj
+++ b/eAppointmentServer/eAppointmentServer.Application/eAppointmentServer.Application.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="MediatR" Version="12.2.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageReference Include="TS.Result" Version="8.0.5" />
   </ItemGroup>
 
 </Project>
