--- a/eAppointmentServer/eAppointmentServer.Infrastructure/eAppointmentServer.Infrastructure.csproj
+++ b/eAppointmentServer/eAppointmentServer.Infrastructure/eAppointmentServer.Infrastructure.csproj
@@ -7,7 +7,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.3">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\eAppointmentServer.Domain\eAppointmentServer.Domain.csproj" />
   </ItemGroup>
 
 </Project>
