--- a/eAppointmentClient/package.json
+++ b/eAppointmentClient/package.json
@@ -19,6 +19,9 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@sweetalert2/ngx-sweetalert2": "^12.3.0",
+    "devextreme": "23.2.4",
+    "devextreme-angular": "23.2.4",
+    "devextreme-schematics": "^1.6.7",
     "form-validate-angular": "^17.0.1",
     "jwt-decode": "^4.0.0",
     "rxjs": "~7.8.0",
@@ -30,6 +33,8 @@
     "@angular/cli": "^17.3.2",
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
+    "devextreme-cli": "latest",
+    "devextreme-themebuilder": "23.2.4",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
